@@ -9,3 +9,4 @@ Gustavo Sverzut Barbieri <barbieri@gmail.com>
 Raphael Kubo da Costa <kubo@profusion.mobi>
 Mathieu Taillefumier <mathieu.taillefumier@free.fr>
 Albin "Lutin" Tonnerre <albin.tonnerre@gmail.com>
+Adam Simpkins <adam@adamsimpkins.net>
